--- a/bereiche.html
+++ b/bereiche.html
@@ -1,19 +1,53 @@
 <!DOCTYPE html>
 <html lang='de'>
-  <head>
-    <meta charset='UTF-8'>
-    <title>LU02.A01 - Bereiche einsetzen</title>
-    <link rel='stylesheet' href='bereiche.css'>
-  </head>
-  <body>
-    Ich bin die Kopfzeile der Seite
-    Hier steht die Navigation
-    Der Hauptinhalt folgt hier.
+<head>
+  <meta charset='UTF-8'>
+  <title>LU02.A01 - Bereiche einsetzen</title>
+  <link rel='stylesheet' href='bereiche.css'>
+</head>
+
+<body>
+
+<header>
+  Ich bin die Kopfzeile der Seite
+</header>
+<nav>
+  Hier steht die Navigation
+</nav>
+
+<main>
+  Der Hauptinhalt folgt hier.
+
+  <article>
     Ich bin der erste Artikel.
-    Als Abschnitt gehöre ich zum ersten Artikel.
-    Auch ich bin ein Abschnitt.
+
+
+    <section>
+      Als Abschnitt gehöre ich zum ersten Artikel.
+
+    </section>
+
+    <section>
+      Auch ich bin ein Abschnitt.
+
+    </section>
+  </article>
+
+  <article>
     Der zweite Artikel bin ich.
-    Abschnitt eins im Artikel zwei.
-    Die Fusszeile schliesst alles ab.
-  </body>
+
+
+    <section>
+      Abschnitt eins im Artikel zwei.
+    </section>
+  </article>
+
+</main>
+<footer>
+  Die Fusszeile schliesst alles ab.
+
+</footer>
+
+
+</body>
 </html>
