--- a/bereiche.html
+++ b/bereiche.html
@@ -1,53 +1,40 @@
 <!DOCTYPE html>
-<html lang='de'>
+<html lang="de">
 <head>
-  <meta charset='UTF-8'>
+  <meta charset="UTF-8">
   <title>LU02.A01 - Bereiche einsetzen</title>
-  <link rel='stylesheet' href='bereiche.css'>
+  <link rel="stylesheet" href="bereiche.css">
 </head>
-
 <body>
-
 <header>
   Ich bin die Kopfzeile der Seite
-</header>
+
 <nav>
   Hier steht die Navigation
 </nav>
+</header>
 
 <main>
   Der Hauptinhalt folgt hier.
-
-  <article>
-    Ich bin der erste Artikel.
-
-
-    <section>
-      Als Abschnitt gehöre ich zum ersten Artikel.
-
-    </section>
-
-    <section>
-      Auch ich bin ein Abschnitt.
-
-    </section>
-  </article>
-
+<article>
+  Ich bin der erste Artikel.
+  <section>
+    Als Abschnitt gehöre ich zum ersten Artikel.
+  </section>
+  <section>
+    Auch ich bin ein Abschnitt.
+  </section>
+</article>
   <article>
     Der zweite Artikel bin ich.
-
-
     <section>
-      Abschnitt eins im Artikel zwei.
+Abschnitt eins im Artikel zwei.
     </section>
   </article>
 
 </main>
 <footer>
   Die Fusszeile schliesst alles ab.
-
 </footer>
-
-
 </body>
 </html>
